force-app/main/default/objects/MassiveLoaderRequestItem__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Multisite Request</relationshipLabel>
    <relationshipName>MultisiteRequestItems</relationshipName>
    <type>Lookup</type>
</CustomField>