force-app/main/default/objects/MassiveLoaderRequestItem__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Elementi Della Richiesta</relationshipLabel>
    <relationshipName>Elementi_Della_Richiesta</relationshipName>
    <type>Lookup</type>
</CustomField>