force-app/main/default/objects/MassiveLoaderRequestItem__c/fields/MassiveLoaderRequest__c.field-meta.xml
<CustomField>
    <fullName>MassiveLoaderRequest__c</fullName>
    <label>Richiesta di Caricamento</label>
    <referenceTo>MassiveLoaderRequest__c</referenceTo>
    <relationshipLabel>Massive Loader Request Request Item</relationshipLabel>
    <relationshipName>MassiveLoaderRequest_Request_Item</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>