force-app/main/default/objects/MassiveLoaderRequestItem__c/fields/NextStepData__c.field-meta.xml
<CustomField>
    <fullName>NextStepData__c</fullName>
    <label>Next Step Data</label>
    <type>TextArea</type>
</CustomField>