force-app/main/default/objects/MassiveLoaderRequestItem__c/fields/RelatedRequestItem__c.field-meta.xml
<CustomField>
    <fullName>RelatedRequestItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Elemento Della Richiesta</label>
    <referenceTo>MassiveLoaderRequestItem__c</referenceTo>
    <relationshipLabel>Elementi Della Richiesta</relationshipLabel>
    <relationshipName>RelatedRequestItems</relationshipName>
    <type>Lookup</type>
</CustomField>