force-app/main/default/objects/MassiveLoaderRequestItem__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In attesa di lavorazione</fullName>
                <default>true</default>
                <label>In attesa di lavorazione</label>
            </value>
            <value>
                <fullName>In Lavorazione</fullName>
            </value>
            <value>
                <fullName>Chiuso</fullName>
            </value>
            <value>
                <fullName>Errore</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
                <isActive>false</isActive>
                <label>Done</label>
            </value>
            <value>
                <fullName>Error</fullName>
                <isActive>false</isActive>
                <label>Error</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <isActive>false</isActive>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Ready To Run</fullName>
                <isActive>false</isActive>
                <label>Ready To Run</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>