force-app/main/default/objects/MassiveLoaderRequestItem__c/fields/StatusDescription__c.field-meta.xml
<CustomField>
    <fullName>StatusDescription__c</fullName>
    <description>Used for error status</description>
    <label>Status Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>