force-app/main/default/objects/MassiveLoaderRequestItem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>MassiveLoaderRequest__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>